kubernetes/expenselog-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: expenselog
  namespace: expenselog
spec:
  serviceName: expenselog-svc
  selector:
    matchLabels:
      app: expenselog
  replicas: 1 
  template:
    metadata:
      labels:
        app: expenselog
    spec:
      containers:
      - name: expenselog
        image: ghcr.io/joaquingonzalezzanotti/expenselog:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: expenselog-port
        volumeMounts:
        - mountPath: "/app/data"
          name: expenselog-vol
      volumes:
      - name: expenselog-vol
        persistentVolumeClaim:
          claimName: "expenselog-pvc"
