kubernetes/expenselog-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: expenselog-svc
  namespace: expenselog
spec:
  selector:
    app: expenselog
  ports:
  - port: 8080
    targetPort: 8080
