kubernetes/expenselog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenselog-ingress
  namespace: expenselog
  labels:
    name: expenselog
spec:
  rules:
  - host: expenselog.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expenselog-svc
            port:
              number: 8080
